README-분석 시각화정리

--- a/movie-rating-prediction.ipynb
+++ b/movie-rating-prediction.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "83d33e5d",
+   "id": "f9dfc87f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7013b70c",
+   "id": "bc008a1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1adb7522",
+   "id": "bdbcea03",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ac5692a7",
+   "id": "6cbb6c39",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "38544025",
+   "id": "080878bb",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "85092d08",
+   "id": "a0ba408b",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6749d512",
+   "id": "0b426270",
    "metadata": {},
    "source": [
     "## 데이터 분석"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0e4c1a9b",
+   "id": "453c697e",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "af8f71dc",
+   "id": "f2d985c6",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8897eeaf",
+   "id": "f6d5b703",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c8e0f736",
+   "id": "cfeb8427",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "28290de9",
+   "id": "fd4564bb",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "1beeefe3",
+   "id": "c3bcf0db",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7d245316",
+   "id": "ba303660",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e8a42712",
+   "id": "0122c636",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "2052e72b",
+   "id": "d64241e8",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5d8cbbc4",
+   "id": "c4fabcd7",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a1662817",
+   "id": "5c81b6b5",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4d26feb4",
+   "id": "ee522822",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "65adf4af",
+   "id": "d7763ced",
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "6cf644f1",
+   "id": "355206f0",
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "7b95f5f5",
+   "id": "3f91b421",
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db6a4161",
+   "id": "bdcc87ee",
    "metadata": {},
    "source": [
     "## 수학적 기법을 활용한 평점 예측"
@@ -1433,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "47bcc425",
+   "id": "46c2f8f3",
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "390a4eee",
+   "id": "42f7e755",
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc21df8b",
+   "id": "55108f6e",
    "metadata": {},
    "source": [
     "### SVD를 이용한 빈칸 채우기 학습"
@@ -1651,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "99f97b89",
+   "id": "1896fc21",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9eb774c6",
+   "id": "a15c0659",
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a03e6731",
+   "id": "a32d2cce",
    "metadata": {},
    "source": [
     "## 아직 평가하지 않은 영화의 점수 예측하기"
@@ -1724,7 +1724,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "5cfb0df9",
+   "id": "30dcc39f",
    "metadata": {},
    "outputs": [
     {
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "6950aa59",
+   "id": "8a9f1e59",
    "metadata": {},
    "outputs": [
     {
@@ -1862,10 +1862,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f756cad7",
+   "execution_count": 79,
+   "id": "e84c72d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(106, 5), (116, 5), (199, 5), (214, 5), (326, 5), (527, 5), (602, 5), (608, 5), (632, 5), (669, 5)]\n",
+      "\n",
+      "Nobody Loves Me (Keiner liebt mich) (1994) : 5\n",
+      "Anne Frank Remembered (1995) : 5\n",
+      "Umbrellas of Cherbourg, The (Parapluies de Cherbourg, Les) (1964) : 5\n",
+      "Before the Rain (Pred dozhdot) (1994) : 5\n",
+      "To Live (Huozhe) (1994) : 5\n",
+      "Schindler's List (1993) : 5\n",
+      "Great Day in Harlem, A (1994) : 5\n",
+      "Fargo (1996) : 5\n",
+      "Land and Freedom (Tierra y libertad) (1995) : 5\n",
+      "Aparajito (1956) : 5\n",
+      "\n",
+      "Hustler, The (1961) : 5\n",
+      "Star Wars: Episode IV - A New Hope (1977) : 5\n",
+      "Saving Private Ryan (1998) : 5\n",
+      "Raiders of the Lost Ark (1981) : 5\n",
+      "Rocky (1976) : 5\n",
+      "Jaws (1975) : 5\n",
+      "Good, The Bad and The Ugly, The (1966) : 5\n",
+      "Run Lola Run (Lola rennt) (1998) : 5\n",
+      "Goldfinger (1964) : 5\n",
+      "Terminator, The (1984) : 5\n"
+     ]
+    }
+   ],
    "source": [
     "# 타겟 유저가 보지않은 영화 중 예상 평점이 높은 10개 선정\n",
     "# 타겟 유저(user_id가 4인 유저)가 보지 않은 영화 정보를 테스트 데이터로 생성\n",
@@ -1894,6 +1924,7 @@
     "# target_user_movie_predict_dict에서 Top 10\n",
     "target_user_top10_predicted = sorted(target_user_movie_predict_dict.items(), key=operator.itemgetter(1), reverse=True)[:10]\n",
     "print(target_user_top10_predicted)\n",
+    "print()\n",
     "\n",
     "# 타이틀 정보로 출력하기 위해 movie_id마다 movie_title을 딕셔너리 형태로 저장\n",
     "movie_dict = {}\n",
@@ -1921,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f2f3376",
+   "id": "24863d23",
    "metadata": {},
    "outputs": [],
    "source": [
